--- a/index.html
+++ b/index.html
@@ -1,1 +1,244 @@
-Hello world
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Página profissional sobre João Victor">
+  <meta name="author" content="João Victor">
+
+  <title>João Victor</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- fontes -->
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/resume.min.css" rel="stylesheet">
+
+</head>
+
+<body id="page-top">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">João Victor</span>
+      <span class="d-none d-lg-block">
+        <img class="img-fluid img-profile mx-auto mb-2" src="img/profile.PNG" alt="">
+      </span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#sobre">Sobre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experiencia">Experiência</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#formacao">Formação Acadêmica</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#habilidades">Habilidades</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#adicionais">Experiências Adicionais</a>
+        </li>
+        <br/>
+        <li class="nav-item">
+          <button type="button" class="btn btn-dark" onclick="window.open('doc/Currículo - João Victor da Silva Saturnino.pdf')">Acessar Currículo</button>
+        </li>
+       </ul>
+    </div>
+  </nav>
+
+  <div class="container-fluid p-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="sobre">
+      <div class="w-100">
+        <h1 class="mb-0">João Victor</h1>
+        <div class="subheading mb-5">Extremoz/RN· Brasil · (84) 9 8743-7256 ·
+          <a href="mailto:joaovictor.saturnino1@gmail.com">joaovictor.saturnino1@gmail.com</a>
+        </div>
+        <p class="lead mb-5">Admirado pela tecnologia e seus avanços, sempre em busca de conhecimento e de boas relações humanas.</p>
+        <div class="social-icons">
+          <a href="http://www.linkedin.com/in/joaovictorsaturnino" target="_bkank">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://www.github.com/saturninous" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.instagram.com/saturninous/" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://api.whatsapp.com/send?phone=5584987437256&text=Ol%C3%A1%2C%20Jo%C3%A3o%20Victor.%20Tudo%20bem%3F" target="_blank">
+            <i class="fab fa-whatsapp"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experiencia">
+      <div class="w-100">
+        <h2 class="mb-5">Experiência</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Estágiário de Desenvolvimento Web</h3>
+            <div class="subheading mb-3">Secretaria Municipal de Administração de Natal - SEMAD</div>
+            <p>Desenvolvendo sistemas de uso interno do órgão, como a plataforma de registro de ponto, e também atuando na manutenção
+              de sistemas e sites já existentes, também de uso interno da secretaria.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Outubro 2017 - Dezembro 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Desenvolvedor Java</h3>
+            <div class="subheading mb-3">LIFE Tecnologia e Consultoria</div>
+            <p>Auxiliando na atualização de estilo sistemas internos para padrões governamentais e atualizando conhecimentos na área de desenvolvimento, especificamente em Java e Spring Boot.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Dezembro 2019 - Janeiro 2020</span>
+          </div>
+        </div>
+
+        
+      </div>
+
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="formacao">
+      <div class="w-100">
+        <h2 class="mb-5">Formação Acadêmica</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Instituto Federal de Educação, Ciência e Tecnologia do Rio Grande do Norte</h3>
+            <div class="subheading mb-3">Técnico em Informática</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Maio 2015 - Dezembro 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Universidade Federal do Rio Grande do Norte</h3>
+            <div class="subheading mb-3">Bacharelado em Tecnologia da Informação</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Janeiro 2019 - Presente</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="habilidades">
+      <div class="w-100">
+        <h2 class="mb-5">Habilidades</h2>
+
+        <div class="subheading mb-3">Linguagens de Programação, Ferramentas e Frameworks</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item">
+            <i class="fab fa-html5"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-css3-alt"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-java"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fas fa-database"></i>
+          </li>             
+        </ul>
+
+        <div class="subheading mb-3">Conhecimentos intermediários nas seguintes Linguagens de Programação, Ferramentas e Frameworks: </div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Java</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            JavaServer Faces (JSF)</li>
+          <li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Spring Boot</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Hibernate</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            MySQL</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            HTML5, CSS3</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Bootstrap 4</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Primefaces</li>
+        </ul>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="adicionais">
+      <div class="w-100">
+        <h2 class="mb-5">Experiências adicionais</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Voluntário</h3>
+            <div class="subheading mb-3"><a href="doc/Portaria 192-2017-DGSGA.pdf" target="_blank">Participação no projeto integrador "Desenvolvimento de um sistema de controle e monitoramento
+              do acesso de pessoas ao campus IFRN/SGA"</a></div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">IFRN, 2017</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+  </div>
+
+  <footer><p style="text-align: center;">&copy; João Victor - 2020</p></footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/resume.min.js"></script>
+
+</body>
+
+</html>
