atualização texto index

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="subheading mb-5">Extremoz/RN· Brasil · (84) 9 8743-7256 ·
           <a href="mailto:joaovictor.saturnino1@gmail.com">joaovictor.saturnino1@gmail.com</a>
         </div>
-        <p class="lead mb-5">Admirado pela tecnologia e seus avanços, sempre em busca de conhecimento e de boas relações humanas.</p>
+        <p class="lead mb-5">Apaixonado pela tecnologia e seus avanços, sempre em busca de conhecimento e de boas relações humanas.</p>
         <div class="social-icons">
           <a href="http://www.linkedin.com/in/joaovictorsaturnino" target="_bkank">
             <i class="fab fa-linkedin-in"></i>
