atualização footer index - nome completo

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
   </div>
 
-  <footer><p style="text-align: center;">&copy; João Victor - 2020</p></footer>
+  <footer><p style="text-align: center;">&copy; João Victor da Silva Saturnino - 2020</p></footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
