--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <a href="http://www.linkedin.com/in/joaovictorsaturnino" target="_bkank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://www.github.com/saturninous" target="_blank">
+          <a href="https://www.github.com/joaovictorsaturnino" target="_blank">
             <i class="fab fa-github"></i>
           </a>
           <a href="https://www.instagram.com/saturninous/" target="_blank">
