--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Estágiário de Desenvolvimento Web</h3>
+            <h3 class="mb-0">Estagiário de Desenvolvimento Web</h3>
             <div class="subheading mb-3">Secretaria Municipal de Administração de Natal - SEMAD</div>
             <p>Desenvolvendo sistemas de uso interno do órgão, como a plataforma de registro de ponto, e também atuando na manutenção
               de sistemas e sites já existentes, também de uso interno da secretaria.
