Adição de experiência profissional
Adição de experiência profissional mais recente

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experiencia">
       <div class="w-100">
-        <h2 class="mb-5">Experiência</h2>
+        <h2 class="mb-5">Experiências profissionais</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -115,7 +115,19 @@
             <span class="text-primary">Dezembro 2019 - Janeiro 2020</span>
           </div>
         </div>
-
+       
+       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Bolsista de Apoio Técnico</h3>
+            <div class="subheading mb-3">Programa de Pós Graduação em História - UFRN</div>
+            <p>Atuando no manejo de software de gestão de alunos e de suas respectivas produções acadêmicas, bem como no
+              desenvolvimento de sites para fins de eventos acadêmicos relativos ao Programa.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Fevereiro 2020 - Presente</span>
+          </div>
+        </div>
         
       </div>
 
