Atualização do currículo e adição da experiência profissional na página

--- a/index.html
+++ b/index.html
@@ -123,9 +123,20 @@
             <p>Atuando no manejo de software de gestão de alunos e de suas respectivas produções acadêmicas, bem como no
               desenvolvimento de sites para fins de eventos acadêmicos relativos ao Programa.
             </p>
+        </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Fevereiro 2020 - Setembro 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Bolsista de Desenvolvimento de Sistemas</h3>
+            <div class="subheading mb-3">Superintendência de Informática - UFRN</div>
+            <p>Bolsista de Desenvolvimento de Distemas na SINFO/UFRN, trabalhando atualmente com Java, JSF, Hibernate e outras tecnologias de desenvolvimento web na manuteção do Sistema Integrado de Gestão de Atividades Acadêmicas (SIGAA), bem como na criação de novas funcionalidades para o sistema.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Fevereiro 2020 - Presente</span>
+            <span class="text-primary">Outubro 2020 - Presente</span>
           </div>
         </div>
         
