--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Bolsista de Desenvolvimento de Sistemas</h3>
-            <div class="subheading mb-3">Superintendência de Informática - UFRN</div>
+            <div class="subheading mb-3">Superintendência de Informática - UFRN (SINFO)</div>
             <p>Bolsista de Desenvolvimento de Distemas na SINFO/UFRN, trabalhando atualmente com Java, JSF, Hibernate e outras tecnologias de desenvolvimento web na manuteção do Sistema Integrado de Gestão de Atividades Acadêmicas (SIGAA), bem como na criação de novas funcionalidades para o sistema.</p>
           </div>
           <div class="resume-date text-md-right">
