--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Bolsista de Desenvolvimento de Sistemas</h3>
-            <div class="subheading mb-3">Superintendência de Informática - UFRN (SINFO)</div>
-            <p>Bolsista de Desenvolvimento de Sistemas na SINFO/UFRN, trabalhando atualmente com Java, JSF, Hibernate e outras tecnologias de desenvolvimento web na manutenção do Sistema Integrado de Gestão de Atividades Acadêmicas (SIGAA), bem como na criação de novas funcionalidades para o sistema.</p>
+            <div class="subheading mb-3">Supeintendência de Tecnologia da Informação (STI)</div>
+            <p>Bolsista de Desenvolvimento de Sistemas na SINFO/UFRN, trabalhando com Java, JSF, Hibernate e outras tecnologias de desenvolvimento web na manutenção do Sistema Integrado de Gestão de Atividades Acadêmicas (SIGAA), bem como na criação de novas funcionalidades para o sistema.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Outubro 2020 - Julho 2021</span>
@@ -147,7 +147,18 @@
             <p>Analista Desenvolvedor na Esig Software e Consultoria, empresa do Grupo Esig. Atuando na manutenção e evolução do Sistema Integrado de Gestão da Educação</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Julho 2021 - Presente</span>
+            <span class="text-primary">Julho 2021 - Maio 2022</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Analista de Sistemas</h3>
+            <div class="subheading mb-3">Supeintendência de Tecnologia da Informação (STI)</div>
+            <p>Analista de sistemas trabalhando atualmente com Java, JSF, Hibernate e outras tecnologias de desenvolvimento web na manutenção do Sistema Integrado de Gestão de Atividades Acadêmicas (SIGAA), bem como na criação de novas funcionalidades para o sistema.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Maio 2022 - Atualmente</span>
           </div>
         </div>
         
